style.css
html {
    scroll-behavior: smooth;
}

body {
    padding: 0;
    margin: 0;
    background-color: #ffffff;
    color: #333333;
}

* {
    font-family: 'Work Sans', sans-serif;
}

.site_wrapper {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
}

header {
    position: sticky;
    padding: 0rem;
    background-color: transparent;
}

.brand_container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.logo {
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: #A53DFF;
    border-radius: 100px;
    color: #ffffff;
    height: 3rem;
    width: 3rem;
    text-align: center;
    font-size: 1.5rem;
    font-weight: 600;
    margin-right: 1rem;
}

nav {

    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1rem 2rem;
    max-width: 1320px;
    margin: auto;
    top: 0;
}

#collapsible {
    display: none;
    background-color: #A53DFF;
    color: white;
    cursor: pointer;
    padding: 18px;
    width: 75px;
    border: none;
    text-align: left;
    outline: none;
    font-size: 15px;
}

.collapsible-nav {
    display: block;
    text-align: center;
    margin: 0;
    padding: 0;
}


.active,
.collapsible:hover {
    background-color: #555;
}

#content {
    background-color: white;
    overflow: hidden;
    max-height: 0px;
    transition: max-height .5s ease;
}

#content  li {
    border-top: .5px solid #13223823;
    color: #E6E8EB;
    background-color: #A53DFF;
}

ul {
    display: flex;
    appearance: none;
    list-style-type: none;
}

.active {
    border-radius: 2px;
    background: var(--primary-500, #A53DFF);
    color: white !important;
}

aside {
    position: fixed;
    width: 8rem;
    top: 5rem;
    left: -100rem;
    transition: all 1s ease;
}

aside ul {
    width: 100%;
    flex-direction: column;
    padding: 1rem;
}

aside li {
    margin: 1rem 0;
    background-color: #e6e8eb7e;
    backdrop-filter: blur(12px);
}

li {
    padding: .75rem 1.25rem;
    color: #333333;
}

a {
    appearance: none;
    text-decoration: none;
    font-size: 1rem;
    font-style: normal;
    font-weight: 500;
    line-height: 24px;
    color: inherit;
}

main {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

section:nth-child(odd) {
    background-color: #ffffff;

}

section:nth-child(even) {
    background-color: #f0f1f3;
}

section {
    width: 100%;
    padding: 4rem 0;
}

footer {
    z-index: 100;
    background: #2B384C;
}

footer li {
    color: var(--gray-50, #e0e0e0c2);
    font-weight: 200;
}

footer ul {
    justify-content: center;
}

.page {
    max-width: 70rem;
    margin: auto;
    display: flex;
    align-content: center;
}

.page-card {
    background-color: white;
    border-radius: 1rem;
    box-shadow: 0px 36px 105px 0px rgba(43, 56, 76, 0.10);
    height: 40rem;
    padding: 3rem;
}

.hero_img {
    margin: auto 5rem auto 10rem;
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
}

.hero_img img {
    width: 16rem;
    height: 20rem;
    border-radius: 1rem;
    object-fit: cover;
}

article {
    margin: auto 5rem auto 3rem;
}

.social_media {
    width: 55%;
}

.btn-container {
    display: flex;
    justify-content: center;
    align-content: center;
    padding: .5rem;
    background-color: white;
    border-radius: 4px;
    height: auto;
    box-shadow: 0px 12px 64px 0px rgba(28, 25, 25, 0.12);
    height: 3rem;
    padding: 0;
    align-items: center;
    margin-top: -2rem;
}

.btn-container a {
    display: flex;
    align-items: center;
    padding: 1rem 1rem;
    cursor: pointer;
    transition: all .3s ease-in;
    border-radius: 4px;
}

.btn-container svg {
    fill: #A53DFF;
}

.btn-container a:hover {
    background-color: #A53DFF;
}

.btn-container a:hover svg {
    fill: white;
}

article button {
    margin-top: 1rem;
}

h1 {
    align-self: stretch;
    color: #132238;
    font-size: 2rem;
    font-weight: 600;
    line-height: 4rem;
    margin-bottom: .25rem;
    margin-top: .5rem;
}

h3 {
    color: #556070;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5rem;
    margin-bottom: .1rem;
}

p {
    color: #556070;
    font-size: .8rem;
    font-style: normal;
    font-weight: 400;
    line-height: 1.5rem;
}

button {
    padding: 12px 24px;
    appearance: none;
    border-radius: 4px;
    background: #A53DFF;
    color: white;
    border-radius: .2rem;
    cursor: pointer;
    transition: all 0.3s ease-in;
    border: none;
    margin: 1rem 0;
}

.btn-border {
    background: transparent;
    color: #A53DFF;
    border: 1px solid #A53DFF;
}

.research_card {
    display: grid;
    gap: 1rem;
    grid-template-columns: auto auto;
    margin: 0 3rem;
}

.card {
    display: inline-flex;
    padding: 1.5rem;
    flex-direction: column;
    align-items: flex-start;
    border-radius: 12px;
    background: #FFF;
    transition: all .5s ease-in-out;
}

.card:hover {
    box-shadow: 32px 32px 124px 0px rgba(43, 56, 76, 0.10);
    margin-bottom: .5rem;
}

.card .svg_holder {
    padding: 1rem;
    border-radius: 6px;
    background-color: #f5ebfe;
    transition: all .5s ease-in-out;
}

.card:hover .svg_holder {
    background-color: #A53DFF;
}

.card svg {
    fill: #A53DFF;
    transition: all .5s ease-in-out;
}

.card:hover svg {
    fill: white;
}

.card:hover button {
    background-color: #A53DFF;
    color: white;
}

.card_container:nth-child(even) {
    margin-top: 2rem;
}

.card_container div {
    margin-top: 1rem;
}

.card h2 {
    color: #132238;
    font-size: 1.2rem;
    font-weight: 600;
    line-height: 1.5rem;
    margin: 1.58rem 0 .5rem 0;
}

.card p {
    color: #556070;
    font-size: .8rem;
    font-style: normal;
    font-weight: 400;
    line-height: 1.5;
}

.publictaion-section {
    width: 100%;
    margin: 0 auto;
}

.title {
    margin: 0 auto;
    text-align: center;
}

.publictaion {
    display: grid;
    grid-template-columns: auto auto auto;
    gap: 1rem;
}

.publictaion .card {
    padding: 0;
    border: 1px solid #E6E8EB;
}

.publictaion .card {
    margin: 0 1rem;
    padding: 0;
    border: 1px solid #E6E8EB;
}

.publictaion .card img {
    width: 100%;
}

.info {
    margin: 1rem;
}

.read-more {
    display: flex;
    justify-content: center;
    margin: 1rem 0;
}

.work_cards {
    display: grid;
    gap: 1rem;
}

.work_cards .card {
    border-radius: 2px;
    padding: .5rem;
    margin: 0 3rem;
}

.work_cards .card:hover {
    border-left: 2px solid #A53DFF;
}

.work_cards h2 {
    margin-top: 0;
}

.contact-me .card {
    margin-top: 1rem;
    display: flex;
    flex-direction: row;
    width: 80%;
    padding: .5rem;
}

.contact-me .info {
    margin: 0 1rem;
}

.contact-me h5 {
    margin-top: .1rem;
}

form {
    margin: auto 1rem auto 2rem;
}

input {
    margin: 1rem 0;
    width: 100%;
    height: 3rem;
    appearance: none;
    border: none;
    border-bottom: 1px solid #132238;
}

input:focus-visible {
    outline: none;
    appearance: none;
    border: none;
    color: #A53DFF;
    border-bottom: 1px solid #A53DFF;
}

form button {
    margin-top: 3rem;
}

.submit {
    appearance: none;
    background: transparent;
    box-shadow: none;
    border: none;
    outline: none;
    margin: 0;
    padding: 0;
    color: #fff;
    height: 1rem;
}

footer ul {
    padding: 0;
}



@media screen and (max-width: 1380px) {
    aside ul {
        width: 100%;
        margin-left: -6rem;
        transform: scale(.8);
    }

    aside li {
        flex-grow: 1;
    }
}

@media screen and (max-width: 1081px) {
    aside {
        width: 100%;
        top: 90%;
    }

    aside ul {
        flex-direction: row;
        transform: scale(1);
        width: 100%;
    }

    .page {
        flex-direction: column;
        padding: 2rem;
        height: auto;
    }

    .hero_img {
        margin: auto;
    }

    .publictaion {
        grid-template-columns: auto auto;
        gap: 1rem;
        margin: 0;
    }

    .publictaion .card {
        margin: 0;
    }

}

@media screen and (max-width: 850px) {
    .main_nav {
        display: none;
    }

    #collapsible {
        display: block;
    }

    section{
        padding: 0;
    }
}

@media screen and (max-width: 560PX) {
    aside {
        top: 88%;
        text-align: center;
    }

    aside li {
        padding: 1rem .2rem;
    }

    aside a{
        font-size: .9rem;
        font-weight: 700;
    }

    footer li{
        padding: 1rem .5rem;
    }

    footer a{
        font-size: .6rem;
    }

    article {
        text-align: center;
        margin: 4px;
    }

    .research_card {
        grid-template-columns: auto;
        gap: 0;
        margin: 0;
    }

    .card_container:nth-child(2n) {
        margin-top: 0;
    }

    .publictaion {
        grid-template-columns: auto;
    }
    .work_cards .card {
        border-radius: 2px;
        padding: .5rem;
        margin: 0;
    }

}

